fix: removed enable-preview for compile