@@ -137,7 +137,6 @@
           <!-- Need the source and target properties so maven-javadoc-plugin will find maven-compile-plugin -->
           <source>${java.version}</source>
           <target>${java.version}</target>
-          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -156,28 +155,29 @@
           </dependency>
         </dependencies>
         <configuration>
-            <reportFormat>plain</reportFormat>
-            <consoleOutputReporter>
-                <disable>true</disable>
-            </consoleOutputReporter>
-            <includes>
-              <include>**/*Test.java</include>
-              <exclude>**/Test*.java</exclude>
-            </includes>
-            <statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
+          <reportFormat>plain</reportFormat>
+          <useModulePath>false</useModulePath>
+          <consoleOutputReporter>
+              <disable>true</disable>
+          </consoleOutputReporter>
+          <includes>
+            <include>**/*Test.java</include>
+            <exclude>**/Test*.java</exclude>
+          </includes>
+          <statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
+            <disable>false</disable>
+            <version>3.0</version>
+            <usePhrasedFileName>false</usePhrasedFileName>
+            <usePhrasedTestSuiteClassName>true</usePhrasedTestSuiteClassName>
+            <usePhrasedTestCaseClassName>true</usePhrasedTestCaseClassName>
+            <usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
+          </statelessTestsetReporter>
+          <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter">
               <disable>false</disable>
-              <version>3.0</version>
               <usePhrasedFileName>false</usePhrasedFileName>
-              <usePhrasedTestSuiteClassName>true</usePhrasedTestSuiteClassName>
-              <usePhrasedTestCaseClassName>true</usePhrasedTestCaseClassName>
-              <usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
-            </statelessTestsetReporter>
-            <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter">
-                <disable>false</disable>
-                <usePhrasedFileName>false</usePhrasedFileName>
-                <usePhrasedClassNameInRunning>true</usePhrasedClassNameInRunning>
-                <usePhrasedClassNameInTestCaseSummary>true</usePhrasedClassNameInTestCaseSummary>
-              </statelessTestsetInfoReporter>
+              <usePhrasedClassNameInRunning>true</usePhrasedClassNameInRunning>
+              <usePhrasedClassNameInTestCaseSummary>true</usePhrasedClassNameInTestCaseSummary>
+          </statelessTestsetInfoReporter>
         </configuration>
       </plugin>
       <plugin>
@@ -319,6 +319,24 @@
           <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>${dependency-check.version}</version>
+        <configuration>
+          <nvdApiDelay>1000</nvdApiDelay>
+          <name>Dependency Check</name>
+          <autoUpdate>false</autoUpdate>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <phase>verify</phase>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
@@ -433,11 +451,8 @@
         <artifactId>dependency-check-maven</artifactId>
         <version>${dependency-check.version}</version>
         <configuration>
-          <nvdApiKey>c0e8ff62-c5ca-4fdc-a255-ff8e1e507714</nvdApiKey>
           <nvdApiDelay>1000</nvdApiDelay>
           <name>Dependency Check</name>
-          <!-- Checking for updates can occassionally take a VERY long time -->
-          <autoUpdate>false</autoUpdate>
         </configuration>
         <reportSets>
             <reportSet>
